# automatic-eureka

./: config.py
products/Decision/: conftest.py  modelv2.py  openapi.json  pyproject.toml
products/Decision/e2e/: conftest.py
products/Decision/framework/: model.py
products/Decision/resources/: Export_EaAMdwbqgk.json  Export_WiPykMsDho.json  Export_bAMetEMmKp.json  Export_eXymICmgGl.json  import_bad.json  import_unexisting.json  scorecard_test_values.xlsx  test_data_to_have_caseResult_true_and_false.xls  test_success.xlsx  test_var_calc_success.xlsx
products/Decision/runtime_tests/: test_aggregate_compute_runtime.py  test_branch_runtime.py  test_commhub_read_runtime.py  test_commhub_write_runtime.py  test_communication_runtime.py  test_custom_code_runtime.py  test_external_service_runtime.py  test_fork_join_runtime.py  test_insert_runtime.py  test_offer_runtime.py  test_offer_storage_read_runtime.py  test_offer_storage_write_runtime.py  test_policy_runtime.py  test_read_runtime.py  test_ruleset_runtime.py  test_scorecard_runtime.py  test_start_finish_runtime.py  test_subdiagram_runtime.py  test_tarantool_insert_runtime.py  test_tarantool_read_runtime.py  test_variable_calculation_runtime.py
products/Decision/sdi_tests/: conftest.py
products/Decision/tests/: conftest.py  t.t.md
products/Decision/tests_schema/: test_schematesis.py
products/Decision/ui_tests/: test_ui_demo.py
products/Decision/utilities/: aggregate_constructors.py  commhub_node_constructors.py  communication_constructors.py  custom_code_constructors.py  custom_models.py  db_tables_utils.py  (+15 more)
(+351 files in other folders)
