[tool.poetry]
name = "decision"
version = "0.2.0"
description = ""
authors = [
    "Andrey Gusev <andrey.gusev@glowbyteconsulting.com>",
    "Liliya Shanina <liliya.shanina@glowbyteconsulting.com>",
    "Kamil Khaertdinov <kamil.khaertdinov@glowbyteconsulting.com>",
    "Irina Kovshutina <irina.kovshutina@glowbyteconsulting.com>"
]
readme = "README.md"
include = ["framework/**/*"]
exclude = ["tests/**/*", "e2e/**/*", "runtime_tests/**/*"]


[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
